syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "StripedSecondApi";

service StripedSecond {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.StripedSecond"
      entity_type: "striped_second"
      state: "io.aggregator.entity.StripedSecondState"
      events: [
        "io.aggregator.entity.StripedSecondActivated",
        "io.aggregator.entity.StripedSecondLedgeringActivitiesAdded",
        "io.aggregator.entity.StripedSecondAggregated"
      ]
    }
  };

  rpc AddLedgerItems(AddLedgerItemsCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/striped_second/add-ledger-items"
      body: "*"
    };
  }

  rpc AggregateStripedSecond(AggregateStripedSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/striped_second/aggregate"
      body: "*"
    };
  }
}

message AddLedgerItemsCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  int64 epoch_second = 2 [(kalix.field).entity_key = true];
  int32 stripe = 3 [(kalix.field).entity_key = true];
  string transaction_id = 4;
  google.protobuf.Timestamp timestamp = 5;
  repeated LedgerItem ledger_item = 6;
  string shop_id = 7;
  string event_type = 8;
}

message LedgerItem {
  string service_code = 1 [(kalix.field).entity_key = true];
  string account_from = 2 [(kalix.field).entity_key = true];
  string account_to = 3 [(kalix.field).entity_key = true];
  string amount = 4;
}

message AggregateStripedSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  int64 epoch_second = 2 [(kalix.field).entity_key = true];
  int32 stripe = 3 [(kalix.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 4;
  string payment_id = 5;
}
